--- a/Res/config.json
+++ b/Res/config.json
@@ -50,6 +50,9 @@
                                 
     "sharedPaths":
     [
+        "Res/shared/audio/abc_name_sound",
+        "Res/shared/audio/abc_name_sound_word",
+        "Res/shared/audio/abc_sound",
         "Res/shared/audio/",
         "Res/shared/strings/",
         "Res/shared/animations/"
