Added the story slide.

--- a/Res/config.json
+++ b/Res/config.json
@@ -50,6 +50,7 @@
                                 
     "sharedPaths":
     [
+        "Res/shared/audio/story",
         "Res/shared/audio/color",
         "Res/shared/audio/drag",
         "Res/shared/audio/reading",
