--- a/proj.ios_mac/ios/Info.plist
+++ b/proj.ios_mac/ios/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleDisplayName</key>
-	<string>${PRODUCT_NAME}</string>
+	<string>Read English</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
@@ -16,8 +16,6 @@
 		<string>Icon-80</string>
 		<string>Icon-58</string>
 		<string>Icon-120</string>
-		<string>Icon.png</string>
-		<string>Icon@2x.png</string>
 		<string>Icon-57.png</string>
 		<string>Icon-114.png</string>
 		<string>Icon-72.png</string>
@@ -34,15 +32,13 @@
 		<string>Icon-152</string>
 		<string>Icon-76</string>
 		<string>Icon-120</string>
-		<string>Icon.png</string>
-		<string>Icon@2x.png</string>
 		<string>Icon-57.png</string>
 		<string>Icon-114.png</string>
 		<string>Icon-72.png</string>
 		<string>Icon-144.png</string>
 	</array>
 	<key>CFBundleIdentifier</key>
-	<string>com.reenboog.agame</string>
+	<string>com.rg.learnenglish</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
